log all nodes, not just elements
git-svn-id: http://svn.code.sf.net/p/ieleak/code/trunk@34 1d0c8c2e-d011-0410-995d-ff3358b83dd4

--- a/src/tests/hiddenCellTest.html
+++ b/src/tests/hiddenCellTest.html
@@ -15,7 +15,7 @@
       </script>
    </head>
    <body>
-      <p>This page contains a hidden table cell; it should not be reported as a memory leak.</p>
+      <p>This page contains a hidden table cell; it will be reported as a memory leak.</p>
       <p><input type="button" value="Show Cell" onclick="breakLeak();"/></p>
       <table>
          <tr>
